applets/kicker: refresh kastatsfavoritesmodel after ksycoca change

KAStatsFavoritesModel listens to ksycoca changes, so that any
uninstalled applications can be removed from the local data structure.
(Albeit with an error that makes it only remove some of the cache
entries). The problem is that this is not enough; the Activities
database maintains entries after they are removed, so if an uninstalled
favorite is reinstalled, it should immediately show up in the
favoritesmodel again (as it will after restarting or switching
activities). This is particularly important as some online updates may
be registered as a sequence of uninstallations and reinstallations of
the software, so an update may (temporarily) remove it from the
favorites.

Instead, let's just regenerate the internal model when the installed
apps change - we'd need to do much of the work anyway, and this is a
lot simpler than manually re-establishing the sync. We also do a reset
for the AppsModel in such cases (which typically has a lot more entries)
and do a similar reset whenever the activity changes so adding even more
complexity to this case to save a small amount of extra work does not
seem necessary.

BUG: 494542
CCBUG: 517167
CCBUG: 503912

See also https://invent.kde.org/plasma/plasma-workspace/-/work_items/184


(cherry picked from commit 9c30f7d107ff0fe139dffefacbb913a39d397feb)

Co-authored-by: Christoph Wolk <cwo.kde@posteo.net>